--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+__pycache__
 /node_modules
 /.pnp
 .pnp.js
 
 # testing
 /coverage
+*.ipynb
 
 # production
-/build
 
 # misc
 .DS_Store
