--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,6 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
-*.so
-
 # Distribution / packaging
 .Python
 build/
@@ -127,14 +124,13 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-=======
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 __pycache__
 /node_modules
 /.pnp
 .pnp.js
+package-lock.json
 
 # testing
 /coverage
@@ -152,3 +148,6 @@ __pycache__
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# build zip
+build.zip
