--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pokemonspeedviewer",
-  "version": "0.2.1",
+  "version": "0.2.5",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -46,6 +46,7 @@
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.2.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
   }
